--- a/app.json
+++ b/app.json
@@ -15,8 +15,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/EvamariaTG/EvaMaria",
-    "repository": "https://github.com/EvamariaTG/EvaMaria",
+    "website": "https://github.com/rayner074/EvaMaria2",
+    "repository": "https://github.com/rayner074/EvaMaria2",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
@@ -64,7 +64,7 @@
         },
         "COLLECTION_NAME": {
             "description": "Name of the collections. Defaults to Telegram_files. If you are using the same database, then use different collection name for each bot",
-            "value": "Telegram_files",
+            "value": "TG_files",
             "required": false
         }
     },
