--- a/app.json
+++ b/app.json
@@ -50,6 +50,11 @@
             "description": "Username or ID of users to give access of inline search. Separate multiple users by space.\nLeave it empty if you don't want to restrict bot usage.",
             "required": false
         },
+        "AUTO_DLTS": {
+            "description": "Set this true if you don't want autodelete features"
+            "Value" : "false",
+            "required": false
+        },
         "AUTH_CHANNEL": {
             "description": "ID of channel.Make sure bot is admin in this channel. Without subscribing this channel users cannot use bot.",
             "required": false
